# docker-neural-memory

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_GUIDE.md  Dockerfile  Dockerfile.dev  PLAN.md  README.md  SPEC.md  TASKS.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/skills/dgx-spark-expert/: SKILL.md
.claude/skills/dgx-spark-expert/references/: ai-workbench.md  hardware-specs.md  known-issues.md  playbooks-index.md  software-stack.md
.claude/skills/docker-neural-memory/: SKILL.md
.claude/skills/docker-neural-memory/references/: architecture.md  cicd.md  docker-patterns.md  docker.md  implementation.md  killer-demo.md  mcp-interface.md  mcp.md  titans-architecture.md
.github/workflows/: ci.yml
demo/: killer_demo.py
deploy/dgx-spark/: Dockerfile.demo  README.md  app.py  docker-compose.yml
deploy/huggingface/: Dockerfile  README.md  app.py  requirements.txt
docs/: project-guide.html
experiments/: README.md
experiments/datasets/: capacity.json  generalization.json  learning.json  retention.json
experiments/gordon/: README.md  interactive_test.py  test_gordon.py
experiments/scripts/: run_experiments.py
scripts/: deploy_hf.py
src/: __init__.py  config.py  http_server.py
src/mcp_server/: __init__.py  server.py  tools.py
src/memory/: __init__.py  consolidation.py  neural_memory.py  ttt_layer.py
src/observability/: __init__.py  metrics.py
src/state/: __init__.py  checkpoint.py  versioning.py
tests/: __init__.py  conftest.py  test_learning.py  test_persistence.py
tests/unit/: test_neural_memory.py  test_observability.py
