[project]
name = "docker-neural-memory"
version = "0.1.0"
description = "Containerized neural memory that learns at test time using Titans/TTT architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Carlos Crespo", email = "macayaven@gmail.com"}
]
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
    "rich>=13.0.0",
]
all = [
    "docker-neural-memory[mcp,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff replaces black, flake8, isort
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B905",   # zip() without strict= (Python 3.10+)
    "ISC001", # conflicts with formatter
    "UP006",  # Use dict instead of Dict (Python 3.9 compat)
    "UP007",  # Use X | Y for Union (Python 3.10+)
    "UP035",  # typing.Dict deprecated (Python 3.9 compat)
    "UP045",  # Use X | None for Optional (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy for type checking
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "edge_tts.*", "gradio.*", "langfuse.*", "pydantic_settings", "pydantic_settings.*", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.memory.neural_memory", "src.memory.ttt_layer", "src.config"]
# These modules subclass torch.nn.Module and pydantic.BaseSettings which have type: Any
disable_error_code = ["misc"]

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
